# practise-rust-figment

./: Cargo.toml
config/: default.toml  local.toml  prod.yaml
src/: config.rs  main.rs
