[package]
name = "lenfigment"
version = "0.1.0"
edition = "2021"
authors = ["hongminzhang"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
figment = { version = "0.10", features = ["toml", "env", "yaml"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
anyhow = "^1.0"